fixed header layout on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -23053,7 +23053,7 @@ ol.commentlist li .star-rating {
 		margin-left: 5px;
 	}
 	.navbar-toggler {
-		margin-top: 20px;
+		margin-top: 10px;
 		margin-bottom: 10px;
 	}
 }
